--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         display: none !important;
       }
 
-      .car {
+/*       .car {
         position: absolute;
         height: 50px;
         width: 30px;
@@ -18,7 +18,7 @@
         left: 200px;
         margin: auto;
         background-size: cover;
-      }
+      } */
       .gameScreen {
         background-color: rgb(75, 71, 71);
         height: 100vh;
