--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       .hide {
         display: none !important;
       }
-
-/*       .car {
+/* 
+      .car {
         position: absolute;
         height: 50px;
         width: 30px;
